# CoWorker

./: .env.example  .gitattributes  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  Dockerfile  README.en.md  README.md  docker-compose.yaml  pyproject.toml
.coworker/subconscious/audit/: MODE.en.md
.coworker/subconscious/explore/: MODE.en.md
.coworker/subconscious/garden/: MODE.en.md
.coworker/subconscious/introspect/: MODE.en.md  MODE.md
.coworker/subconscious/meta/: MODE.en.md  MODE.md
.coworker/subconscious/summarize/: MODE.en.md
.github/workflows/: ci.yml  container-release.yml  coworker-desktop-release.yml  mypy-cache.yml  release.yml
apps/coworker-desktop/bridge/: Cargo.toml
apps/coworker-desktop/bridge/src/: codex_session.rs  command_resolver.rs
apps/coworker-desktop/desktop/: package-lock.json  package.json
apps/coworker-desktop/desktop/src/: App.test.tsx  App.tsx  styles.css  tauri.ts
apps/coworker-desktop/desktop/src-tauri/: tauri.conf.json
apps/explore-lab/backend/explore_lab/: assembly.py  branch_runner.py  lab_communicate.py
apps/explore-lab/backend/tests/: test_branch_runner.py
apps/explore-lab/frontend/: package-lock.json  package.json
docs/: README.en.md  README.md  concepts.en.md  concepts.md  configuration.en.md  configuration.md  desktop.en.md  desktop.md
docs/architecture/: concepts.en.md  concepts.md  data-boundaries.en.md  data-boundaries.md
docs/channels/: README.en.md  README.md  api-and-channels.en.md  api-and-channels.md  desktop.en.md  desktop.md
docs/development/: development.en.md  development.md
docs/operations/: configuration.en.md  configuration.md
scripts/: bump_version.py  check_version.py  container-entrypoint.sh  finalize_changelog.py  prepare_desktop_release.py
src/coworker/: __main__.py  container_workspace.py
src/coworker/agent/: bubble.py  bubble_communication.py  bubble_handoff.py  bubble_loop.py  event_collector.py  incoming_content.py  log_store.py  loop.py  subconscious.py  subconscious_mode.py
src/coworker/api/: admin.py  app.py  routes.py  ws.py
src/coworker/brain/: base.py  brain.py  minimax_provider.py  openai_provider.py  qwen_provider.py  zhipu_provider.py
src/coworker/channels/: __init__.py  base.py  inbound.py  registry.py  runtime.py  system.py
src/coworker/channels/desktop/: __init__.py  channel.py  communicate_sender.py  detail_store.py  inbound.py  (+2 more)
src/coworker/core/: config.py  constants.py  types.py
src/coworker/i18n/: __init__.py  resources.py  runtime.py
src/coworker/identity/: identity.py
src/coworker/memory/: long_term.py  memory_tree.py  recent_activity.py  short_term.py
src/coworker/palaces/: loader.py
src/coworker/prompts/: system_prompt.py
src/coworker/skills/: loader.py
src/coworker/tools/: alarm_tools.py  base.py  breathe_tool.py  browser_tools.py  bubble_tools.py  code_tools.py  communicate_tool.py  file_tools.py  memory_tools.py  pinned_context_tool.py  reasoning_tools.py  registry.py  system_tools.py  vision_tools.py
src/coworker/web/: index.html
tests/unit/: test_admin_api.py  test_api.py  test_brain_time_prefix.py  test_bubble.py  test_bump_version.py  test_channel_host.py  test_channel_registry.py  test_check_version.py  test_communication_listing.py  test_config_export.py  test_container_workspace.py  test_desktop_dispatcher.py  test_desktop_registry.py  test_documentation.py  test_i18n.py  test_identity.py  test_inbox_watcher.py  test_long_term.py  test_prepare_desktop_release.py  test_prompt_builder.py  test_recent_activity.py  test_release_workflows.py  test_restart_restore.py  test_short_term.py  test_tools.py  test_wecom_adapter.py  test_wecom_runner.py
web/: package-lock.json  package.json
web/src/: AdminApp.tsx
web/src/api/: types.ts
web/src/i18n/: admin.tsx
web/src/lib/: runtimeFeed.ts
(+53 files in other folders)
