[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coworker"
version = "0.3.0"
description = "An autonomous AI coworker with memory, identity, and tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.117.0",
    "openai>=1.40",
    "chromadb>=0.5",
    "sentence-transformers>=5.6.0",
    "torch==2.11.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
    "ddgs>=9.14.4",
    "fastapi>=0.110",
    "httpx>=0.27,<1",
    "uvicorn[standard]>=0.29",
    "loguru>=0.7",
    "playwright>=1.61.0",
    "psutil>=6.0",
    "wecom-aibot-sdk==1.0.7",
    "pyyaml>=6.0",
    "mem0ai[nlp]>=0.1",
    "mcp2cli>=0.1",
    "pillow>=10.0",
    "requests>=2.31",
    "python-jenkins>=1.8",
    "python-multipart>=0.0.9",
    "spacy==3.8.*",
    "en-core-web-sm>=3.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
coworker = "coworker.__main__:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["src/coworker"]

[tool.uv.workspace]
members = ["apps/explore-lab/backend"]

[tool.uv.sources]
torch = { index = "pytorch-cpu"}
# uncomment it when you want to use Nvidia GPU
# torch = { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# 独立 skill 脚本的导入路径
pythonpath = [".coworker/skills/jira-bug-create", ".coworker/skills/jenkins"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# Prompt text and user-facing Chinese prose are intentionally kept readable in source.
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
# Some optional integrations do not publish py.typed markers or stubs; do not
# let missing external type metadata block checks of first-party code.
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Tool implementations expose typed keyword arguments while the registry invokes
# them through the generic Tool.execute(**kwargs) boundary.
module = "coworker.tools.*"
disable_error_code = ["override"]
