[package]
name = "coworker-desktop-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "coworker-desktop"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
regex = "1.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.23", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
fs4 = "1.1"

[target.'cfg(windows)'.dependencies]
fs4 = "1.1"
